--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "@components/*": ["./lib/components/*"]
     },
 
     // Vite takes care of building everything, not tsc.
