--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
-      "@components/*": ["./lib/components/*"]
+      "@components": ["./lib/components"]
     },
 
     // Vite takes care of building everything, not tsc.
