--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
+    "prettier-plugin-classnames": "^0.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
