feat(init): add pulumi dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@pulumi/aws": "^6.0.0",
+    "@pulumi/aws-apigateway": "^2.0.0",
+    "@pulumi/awsx": "^2.0.2",
+    "@pulumi/pulumi": "^3.113.0",
+    "@remix-run/architect": "^2.9.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
