feat(init): add configurations

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ai-book-reader",
   "private": true,
   "sideEffects": false,
-  "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "build:lambda": "vite build --config vite.lambda.config.ts",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
@@ -18,15 +18,22 @@
     "@pulumi/awsx": "^2.0.2",
     "@pulumi/pulumi": "^3.113.0",
     "@remix-run/architect": "^2.9.2",
+    "@remix-run/express": "^2.9.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
     "prettier-plugin-classnames": "^0.6.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
