--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "ai-book-reader",
   "private": true,
   "sideEffects": false,
-  "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "build:lambda": "vite build --config vite.lambda.config.ts",
+    "build:lambda": "node build.cjs",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
@@ -38,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
     "aws-sdk": "^2.1632.0",
+    "esbuild": "^0.21.4",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
