--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pulumi/aws-apigateway": "^2.0.0",
     "@pulumi/awsx": "^2.0.2",
     "@pulumi/pulumi": "^3.113.0",
+    "@pulumi/synced-folder": "^0.11.1",
     "@remix-run/architect": "^2.9.2",
     "@remix-run/express": "^2.9.2",
     "@remix-run/node": "^2.9.2",
