--- a/package.json
+++ b/package.json
@@ -2,24 +2,18 @@
   "name": "ai-book-reader",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "remix vite:build",
     "build:lambda": "node build.cjs",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
-    "use-pulumi": "cp pulumi.tsconfig.json tsconfig.json",
-    "use-vite": "cp vite.tsconfig.json tsconfig.json"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
-    "@pulumi/aws": "^6.0.0",
-    "@pulumi/aws-apigateway": "^2.0.0",
-    "@pulumi/awsx": "^2.0.2",
-    "@pulumi/pulumi": "^3.113.0",
-    "@pulumi/synced-folder": "^0.11.1",
     "@remix-run/architect": "^2.9.2",
     "@remix-run/express": "^2.9.2",
     "@remix-run/node": "^2.9.2",
@@ -43,11 +37,6 @@
   },
   "devDependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.588.0",
-    "@aws-sdk/client-dynamodb": "^3.588.0",
-    "@aws-sdk/client-sns": "^3.588.0",
-    "@aws-sdk/client-sqs": "^3.588.0",
-    "@aws-sdk/client-ssm": "^3.588.0",
-    "@aws-sdk/lib-dynamodb": "^3.588.0",
     "@remix-run/dev": "^2.9.2",
     "@types/node": "^20.13.0",
     "@types/react": "^18.2.20",
